# cocos2d-x

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/Modules/: CocosBuildHelpers.cmake  CocosBuildSet.cmake  CocosConfigDefine.cmake  CocosConfigDepend.cmake
cmake/toolchains-master/generic/: Emscripten-wasm.cmake
cocos/: CMakeLists.txt
cocos/2d/: CCCameraBackgroundBrush.cpp  CCFontAtlas.cpp  CCFontAtlas.h  CCFontAtlasCache.cpp  CCFontAtlasCache.h  CCFontFreeType.cpp  CCFontFreeType.h  CCLabel.cpp  CCLabel.h  CCLabelTextFormatter.cpp  CCSprite.cpp
cocos/3d/: CCMesh.cpp  CCSkybox.cpp
cocos/audio/: AudioEngine.cpp  CMakeLists.txt
cocos/audio/android/: AudioDecoder.h  AudioEngine-inl.cpp  AudioEngine-inl.h  AudioPlayer.cpp  AudioPlayer.h
cocos/audio/android-oboe/: AudioDecoder.cpp  AudioDecoder.h  AudioEngine-android.cpp  AudioEngine-android.h  AudioPlayer.cpp  AudioPlayer.h  AudioRenderer.cpp  AudioRenderer.h
cocos/audio/apple/: AudioEngine-inl.h  AudioEngine-inl.mm
cocos/audio/include/: AudioEngine.h
cocos/base/: CMakeLists.txt  ccMacros.h  ccUtils.cpp
cocos/editor-support/spine/: CMakeLists.txt  PolygonBatch.cpp  PolygonBatch.h  SkeletonJson.c  SkeletonRenderer.cpp  SkeletonRenderer.h
cocos/network/: Android.mk  CCWebSocket-android.cpp  CCWebSocket-android.h  CMakeLists.txt  SocketIO.cpp  SocketIO.h  WebSocket.cpp  WebSocket.h
cocos/platform/: CCFileUtils.cpp  CCFileUtils.h  CCPlatformMacros.h  CCSAXParser.h  CMakeLists.txt
cocos/platform/android/: javaactivity-android.cpp
cocos/platform/win32/: CCFileUtils-win32.cpp  CCFileUtils-win32.h
cocos/renderer/: CCPass.cpp  CCPass.h  CCRenderer.cpp  CCRenderer.h
cocos/renderer/backend/: Program.h  ProgramState.h  Types.h  VertexLayout.cpp  VertexLayout.h
cocos/renderer/backend/metal/: ProgramMTL.h  ProgramMTL.mm  ShaderModuleMTL.h  ShaderModuleMTL.mm
cocos/renderer/backend/opengl/: ProgramGL.cpp  ProgramGL.h  TextureCubeGL.cpp  TextureCubeGL.h  TextureGL.h
cocos/scripting/js-bindings/: CMakeLists.txt
cocos/scripting/js-bindings/auto/: jsb_cocos2dx_3d_auto.cpp  jsb_cocos2dx_3d_extension_auto.cpp  jsb_cocos2dx_auto.cpp  jsb_cocos2dx_auto.hpp  jsb_cocos2dx_builder_auto.cpp  jsb_cocos2dx_experimental_video_auto.cpp  jsb_cocos2dx_experimental_video_auto.hpp  jsb_cocos2dx_experimental_webView_auto.cpp  jsb_cocos2dx_extension_auto.cpp  jsb_cocos2dx_navmesh_auto.cpp  jsb_cocos2dx_network_auto.cpp  jsb_cocos2dx_physics3d_auto.cpp  jsb_cocos2dx_spine_auto.cpp  jsb_cocos2dx_spine_auto.hpp  jsb_cocos2dx_studio_auto.cpp  jsb_cocos2dx_ui_auto.cpp  jsb_cocos2dx_ui_auto.hpp
cocos/scripting/js-bindings/auto/api/: jsb_cocos2dx_auto_api.js  jsb_cocos2dx_ui_auto_api.js
cocos/scripting/js-bindings/manual/: jsb_module_register.cpp
cocos/scripting/lua-bindings/auto/: lua_cocos2dx_backend_auto.cpp
cocos/scripting/lua-bindings/manual/: LuaBasicConversions.cpp  LuaBasicConversions.h
templates/: cocos2dx_files.json
templates/cpp-template-default/: CMakeLists.txt
tests/cpp-tests/: CMakeLists.txt
tests/cpp-tests/Classes/: controller.cpp  tests.h
tests/cpp-tests/Classes/BugsTest/: Bug-1174.h
tests/cpp-tests/Classes/FileUtilsTest/: FileUtilsTest.cpp
tests/cpp-tests/Classes/MemoryTests/: MemoryTest.cpp  MemoryTest.h
tests/cpp-tests/Classes/ShaderTest/: ShaderTest.cpp
tests/cpp-tests/Classes/SpineTest/: SpineTest.cpp  SpineTest.h
tests/cpp-tests/Classes/Sprite3DTest/: DrawNode3D.cpp  DrawNode3D.h  Sprite3DTest.cpp
tests/cpp-tests/Classes/UnitTest/: UnitTest.cpp
tests/cpp-tests/proj.android/: gradle.properties
tests/js-tests/project/: CMakeLists.txt
tests/js-tests/project/Classes/: AppDelegate.cpp
tests/js-tests/src/TextureCacheTest/: TextureCacheTest.js
tools/tojs/: cocos2dx.ini  cocos2dx_3d.ini  cocos2dx_3d_ext.ini  cocos2dx_audioengine.ini  cocos2dx_builder.ini  cocos2dx_experimental_video.ini  cocos2dx_experimental_webView.ini  cocos2dx_extension.ini  cocos2dx_navmesh.ini  cocos2dx_network.ini  cocos2dx_physics3d.ini  cocos2dx_spine.ini  cocos2dx_studio.ini  cocos2dx_ui.ini
tools/tolua/: cocos2dx.ini  cocos2dx_3d.ini  cocos2dx_audioengine.ini  cocos2dx_cocosbuilder.ini  cocos2dx_cocosdenshion.ini  cocos2dx_controller.ini  cocos2dx_csloader.ini  cocos2dx_experimental.ini  cocos2dx_experimental_video.ini  cocos2dx_experimental_webview.ini  cocos2dx_extension.ini  cocos2dx_navmesh.ini  cocos2dx_physics.ini  cocos2dx_physics3d.ini  cocos2dx_spine.ini  cocos2dx_studio.ini  cocos2dx_ui.ini
tools/travis-scripts/: run-script.sh
(+1 files in other folders)
